prepare submit to takano

--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/analysis_of_end_to_end_latency.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        ROS2 用に提案されたチェーン対応スケジューリングの下でのチェーンのエンドツーエンドのレイテンシ分析を示す
+        ROS2 用に提案されたチェーン考慮スケジューリングの下でのチェーンのエンドツーエンドのレイテンシ分析を示す
     \end{itembox}
 \end{frame}
 
@@ -127,7 +127,7 @@
 
 % \begin{frame}{}
 %     \begin{itemize}
-%         \item より高いセマンティック優先度チェーンからの干渉
+%         \item より高い優先度チェーンからの干渉
 %         \item ターゲットセグメント $\Phi_{i}$ の WCRT を分析するには, 他のコールバックによって課される最大干渉の上界を設定する必要がある
 %         \item 本論文のフレームワークでは, そのようなコールバックは, 同じ CPU 上の $\Phi_{i}$ のエグゼキュータより優先度の高いエグゼキュータで実行されるか, $\Phi_{i}$ と同じエグゼキュータで優先度の高いコールバックである
 %         \item これらを考慮して, 次のLemmaは, 任意の時間間隔 $t$ に対する干渉コールバック $\tau_{k}$ の最大到着数をキャプチャする
@@ -209,7 +209,7 @@
 
 % \begin{frame}{セクションサマリ}
 %     \begin{itembox}[l]{\textbf{目的}}
-%         提案されたチェーン対応スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドのレイテンシを分析する
+%         提案されたチェーン考慮スケジューリングフレームワークで, 特定のチェーンのエンドツーエンドのレイテンシを分析する
 %     \end{itembox}
 % \end{frame}
 
