--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -7,7 +7,7 @@
     \begin{itemize}
         \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドのレイテンシ解析フレームワークを提案した
         \item チェーンの重要度に基づいてエンドツーエンドのレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリングポリシーを提案した
-        \item これらのスケジューリングポリシーを実現するコールバック優先度割り当てとチェーン対応ノード割り当てアルゴリズムを提示した
+        \item これらのスケジューリングポリシーを実現するコールバック優先度割り当てとチェーン考慮ノード割り当てアルゴリズムを提示した
         \item NVIDIA Xavier NX プラットフォーム上で動作する ROS2 の Eloquent Elusor バージョンにスケジューラを実装した
     \end{itemize}
 \end{frame}
