--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -112,7 +112,7 @@
 \begin{frame}{ケーススタディ II (マルチコアシステム)}
     \fitimage{
         \begin{itemize}
-            \item 実際のシナリオでのチェーン対応スケジューリングの有効性を評価する
+            \item 実際のシナリオでのチェーン考慮スケジューリングの有効性を評価する
             \item 図は, このケーススタディにおけるチェーン構成を示している
         \end{itemize}
     }{case_study2}
@@ -120,7 +120,7 @@
 
 \begin{frame}{ケーススタディ II 実験環境}
     \begin{itemize}
-        \item より低いインデックスチェーンはより高いセマンティック優先度を持つと仮定する
+        \item より低いインデックスチェーンはより高い優先度を持つと仮定する
         \item チェーンの優先度を指定して, ROS2-PiCAS をノード割り当てに使用する
         \item 最初にチェーン 1 からチェーン 4 をそれぞれ異なる CPU コアに割り当て, 次に負荷分散方式でその他を分散する
         \item 割り当て後の各 CPU コアの利用率は, 平均で $0.97$ である
@@ -135,11 +135,11 @@
     }{case_study2_result_a}
 \end{frame}
 
-\begin{frame}{ケーススタディ II 結果1}
-    \fitimage{
-        図は, 測定から観測された最大レイテンシと分析されたレイテンシの比較を示す
-    }{case_study2_result_b}
-\end{frame}
+% \begin{frame}{ケーススタディ II 結果1}
+%     \fitimage{
+%         図は, 測定から観測された最大レイテンシと分析されたレイテンシの比較を示す
+%     }{case_study2_result_b}
+% \end{frame}
 
 % \begin{frame}{ケーススタディ II 考察}
 %     \begin{itemize}
@@ -155,7 +155,7 @@
 \begin{frame}{ケーススタディ II PiCASの優れている点}
     \begin{itemize}
         \item 予想どおり, ROS2-PiCAS はほとんどのリアルタイムチェーン (チェーン 1 からチェーン 5 など) で他のチェーンよりも優れている
-        \item さらに, レイテンシ分析では, これらのリアルタイムチェーンの上界がより厳しくなっている
+        % \item さらに, レイテンシ分析では, これらのリアルタイムチェーンの上界がより厳しくなっている
     \end{itemize}
 \end{frame}
 
@@ -178,7 +178,7 @@
         \item 後者の理由により, より明確な証明がチェーン 4 に見られる
         \item ノンプリエンプティブのため, ROS2およびROS2-SDにおけるチェーン4の待ち時間は, 少なくともチェーン6の実行時間より大きくなるはずであると予想される.
         \item しかし, 観測された待ち時間にはチェーン6の実行時間は含まれていない.
-        \item ROS2-SDにおける連チェーン4の待ち時間の観測値と解析値の差が大きい（図9bの265.5ms と $1804 \mathrm{~ms}$）ことは, この議論を補強しています.
+        % \item ROS2-SDにおける連チェーン4の待ち時間の観測値と解析値の差が大きい（図9bの265.5ms と $1804 \mathrm{~ms}$）ことは, この議論を補強しています.
     \end{itemize}
 \end{frame}
 
@@ -210,67 +210,67 @@
 
 
 
-\subsection{Schedulability experiments}
-\label{ssec: schedulability experiments}
+% \subsection{Schedulability experiments}
+% \label{ssec: schedulability experiments}
 
-\begin{frame}{セクションサマリ}
-    \begin{itembox}[l]{\textbf{目的}}
-        \begin{itemize}
-            \item ROS2-SD および ROS2-PiCAS でのチェーンのスケジューラビリティを評価する
-            \item これらのアプローチの分析実行時間も評価する
-        \end{itemize}
-    \end{itembox}
-\end{frame}
+% \begin{frame}{セクションサマリ}
+%     \begin{itembox}[l]{\textbf{目的}}
+%         \begin{itemize}
+%             \item ROS2-SD および ROS2-PiCAS でのチェーンのスケジューラビリティを評価する
+%             \item これらのアプローチの分析実行時間も評価する
+%         \end{itemize}
+%     \end{itembox}
+% \end{frame}
 
-\begin{frame}{実験マシン}
-    全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
-\end{frame}
+% \begin{frame}{実験マシン}
+%     全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
+% \end{frame}
 
-\begin{frame}{ワークロードの生成方法}
-    \begin{itemize}
-        \item システムの利用率ごとに, ランダムに生成された 1,000 個のワークロードセットのコールバックを使用する
-        \item ワークロードセットの利用率は, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択される
-        \item ワークロードセットごとに, 9 つのチェーンを形成する 45 のコールバックを使用する
-        \item すなわち, 各チェーンは 5 つのコールバックで構成される
-        \item 各コールバックの利用率は, UUniFast アルゴリズム [10] によって取得される
-        \item チェーン期間は $[50,1000] \mathrm{ms}$ の範囲でランダムに選択され, デッドラインはその期間に等しく設定される
-        \item 各チェーンの利用率は 1.0 を超えません
-        \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど期間が短くなるようにチェーンの順序が変更され, インデックスの小さいチェーンにはより高いセマンティック優先度が割り当てられる
-    \end{itemize}
-\end{frame}
+% \begin{frame}{ワークロードの生成方法}
+%     \begin{itemize}
+%         \item システムの利用率ごとに, ランダムに生成された 1,000 個のワークロードセットのコールバックを使用する
+%         \item ワークロードセットの利用率は, 4 コア環境の $\{2.5,3.0,3.5\}$ から選択される
+%         \item ワークロードセットごとに, 9 つのチェーンを形成する 45 のコールバックを使用する
+%         \item すなわち, 各チェーンは 5 つのコールバックで構成される
+%         \item 各コールバックの利用率は, UUniFast アルゴリズム [10] によって取得される
+%         \item チェーン期間は $[50,1000] \mathrm{ms}$ の範囲でランダムに選択され, デッドラインはその期間に等しく設定される
+%         \item 各チェーンの利用率は 1.0 を超えません
+%         \item 各ワークロードセットの生成後, インデックスの小さいチェーンほど期間が短くなるようにチェーンの順序が変更され, インデックスの小さいチェーンにはより高い優先度が割り当てられる
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{スケジューラビリティテストの比較 [結果]}
-    \fullimage{schedulability_result1}
-\end{frame}
+% \begin{frame}{スケジューラビリティテストの比較 [結果]}
+%     \fullimage{schedulability_result1}
+% \end{frame}
 
-\begin{frame}{スケジューラビリティテストの比較 [結果考察]}
-    \begin{itemize}
-        \item どちらのアプローチでも, 利用率が高くなると, スケジューリング可能率は低下する
-        \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
-        \item ROS2-PiCAS では, 最初の 4 つのチェーン (チェーン 1 からチェーン 4 まで) は, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能である
-        \item さらに, ROS2-PiCAS はセマンティック優先度に基づいてチェーンに優先度を付けるため, チェーンの優先度が低くなる (チェーンインデックスが高くなる) と, スケジュール可能率が低下する
-        \item 一方, ROS2-SD では, チェーンデッドラインが短くなるにつれて比率が減少することが分かる (チェーンインデックスが低くなる)
-        \item これは主に, ケーススタディ I (セクション VII-B.)
-    \end{itemize}
-\end{frame}
+% \begin{frame}{スケジューラビリティテストの比較 [結果考察]}
+%     \begin{itemize}
+%         \item どちらのアプローチでも, 利用率が高くなると, スケジューリング可能率は低下する
+%         \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
+%         \item ROS2-PiCAS では, 最初の 4 つのチェーン (チェーン 1 からチェーン 4 まで) は, それぞれが異なる CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能である
+%         \item さらに, ROS2-PiCAS は優先度に基づいてチェーンに優先度を付けるため, チェーンの優先度が低くなる (チェーンインデックスが高くなる) と, スケジュール可能率が低下する
+%         \item 一方, ROS2-SD では, チェーンデッドラインが短くなるにつれて比率が減少することが分かる (チェーンインデックスが低くなる)
+%         \item これは主に, ケーススタディ I (セクション VII-B.)
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{解析実行時間の比較 [実験環境]}
-    \begin{itemize}
-        \item この実験では, ROS2-SD と ROS2-PiCAS について, 各ワークロードセットのエンドツーエンドのレイテンシを計算する時間である分析の実行時間を比較する
-        \item 各分析ツールはシングルスレッドである分析の実行時間は, ワークロードセットの利用率によって自明に影響を受ける
-        \item したがって, 以前と同じワークロードセットを使用する
-        \item ワークロードセットあたりの利用率は $2.5, 3.0, 3.5$ である
-    \end{itemize}
-\end{frame}
+% \begin{frame}{解析実行時間の比較 [実験環境]}
+%     \begin{itemize}
+%         \item この実験では, ROS2-SD と ROS2-PiCAS について, 各ワークロードセットのエンドツーエンドのレイテンシを計算する時間である分析の実行時間を比較する
+%         \item 各分析ツールはシングルスレッドである分析の実行時間は, ワークロードセットの利用率によって自明に影響を受ける
+%         \item したがって, 以前と同じワークロードセットを使用する
+%         \item ワークロードセットあたりの利用率は $2.5, 3.0, 3.5$ である
+%     \end{itemize}
+% \end{frame}
 
-\begin{frame}{解析実行時間の比較 [結果]}
-    \fullimage{analysys_time_result}
-\end{frame}
+% \begin{frame}{解析実行時間の比較 [結果]}
+%     \fullimage{analysys_time_result}
+% \end{frame}
 
-\begin{frame}{解析実行時間の比較 [結果考察]}
-    \begin{itemize}
-        \item どちらのアプローチでも利用率が上がると解析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅くなる
-        \item これは, ROS2-PiCAS とは異なり, ROS2-SD 分析の探索空間は可能な限り長いビジー間隔 (利用率とともに増加する傾向がある) のためであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索するためである [11]
-        \item したがって, チェーン対応スケジューラの提案された分析は, 既存のアプローチよりもはるかに高速であり, 複雑なシステムやランタイムアドミッションコントロールに適用できると結論付けている
-    \end{itemize}
-\end{frame}
+% \begin{frame}{解析実行時間の比較 [結果考察]}
+%     \begin{itemize}
+%         \item どちらのアプローチでも利用率が上がると解析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅くなる
+%         \item これは, ROS2-PiCAS とは異なり, ROS2-SD 分析の探索空間は可能な限り長いビジー間隔 (利用率とともに増加する傾向がある) のためであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索するためである [11]
+%         \item したがって, チェーン考慮スケジューラの提案された分析は, 既存のアプローチよりもはるかに高速であり, 複雑なシステムやランタイムアドミッションコントロールに適用できると結論付けている
+%     \end{itemize}
+% \end{frame}
