--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/main.tex
@@ -8,7 +8,7 @@
 
 %%%%% Front Cover %%%%%
 \title{PiCAS: New Design of Priority-Driven Chain-Aware Scheduling for ROS2}
-\subtitle{2021 RTAS}
+\subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -30,11 +30,11 @@
 
 % \input{introduction.tex}
 % \input{related_work.tex}
-\input{background_and_system_model.tex}
-\input{challenges.tex}
+% \input{background_and_system_model.tex}
+% \input{challenges.tex}
 \input{priority_driven_chain_aware_scheduling.tex}
-\input{analysis_of_end_to_end_latency.tex}
-\input{evaluation.tex}
+% \input{analysis_of_end_to_end_latency.tex}
+% \input{evaluation.tex}
 % \input{conclusion.tex}
 
 \lastpage
