--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/priority_driven_chain_aware_scheduling.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        PiCAS と呼ばれる, ROS2 用の優先度駆動型のチェーン対応スケジューリングフレームワークを紹介する
+        PiCAS と呼ばれる, ROS2 用の優先度駆動型のチェーン考慮スケジューリングフレームワークを紹介する
     \end{itembox}
 \end{frame}
 
@@ -13,7 +13,7 @@
     チェーンのエンドツーエンドのレイテンシを改善するために, 現在の ROS2 スケジューリングアーキテクチャは, 以下2つを考慮して再設計できる
     \begin{enumerate}
         \item 優先度の高いチェーンは, 優先度の低いチェーンより早く実行されること
-        \item 各チェーンにおいて, 新しくリリースされたインスタンスが同じCPUにスケジューリングされている場合, チェーンの先行インスタンスが実行を開始する前にその実行を完了する必要がある
+        \item 各チェーンにおいて, 新しくリリースされたインスタンスが先行インスタンスと同じCPUにスケジューリングされた場合, 新しいインスタンスが実行を開始する前に先行インスタンスの実行を完了する必要がある
     \end{enumerate}
 \end{frame}
 
@@ -22,26 +22,31 @@
     \begin{lemma}[]
         チェーン $\Gamma^{c}:=\left[\tau_{1}, \ldots \tau_{i}, \ldots, \tau_{j}, \ldots, \tau_{N}\right]$ について, コールバックが同じ CPU 上にある時, 以下2つの条件が満たされれば, 新しいインスタンスが実行を開始する前に, 前のチェーンインスタンスがその実行を完了することが保証される
         \begin{enumerate}
-            \item $\tau_{j}$が$\tau_{i}$より高いコールバック優先度を持つ（$\tau_{j} > \tau_{i}$）
+            \item $\tau_{j}$が$\tau_{i}$より高いコールバック優先度を持つ
             \item $\tau_{j}$が$\tau_{i}$のエグゼキュータと同じか高い優先度を持つエグゼキュータで実行される
         \end{enumerate}
     \end{lemma}
+    ※証明略
 \end{frame}
 
 \begin{frame}{Lemma 1が示すこと}
-    \begin{itemize}
-        \item Lemma 1 は, 1 つの CPU コアに割り当てられた $\Gamma^{c}$ の連続するサブセットに適用される
-        \item Lemmaの条件により, 対応するインスタンスのサブセットが到着順に実行されることが保証される
-        \item したがって, $\Gamma^{c}$ のインスタンスは, 後続のインスタンスから干渉を受けない
-    \end{itemize}
+    Lemma 1 の2つの条件を満たすスケジューラでは，自己干渉が発生しない
 \end{frame}
 
-\begin{frame}{以降の流れ}
-    \begin{enumerate}
-        \item エグゼキュータ内で実行されるチェーンとエグゼキュータ間で実行されるチェーンの二つの側面を考慮して, スケジューリングポリシーの概要を説明する
-        \item これらの戦略を実現するコールバック優先度割り当ておよびチェーンを考慮したノード割り当てアルゴリズムを提案する
-    \end{enumerate}
-\end{frame}
+% \begin{frame}{Lemma 1が示すこと}
+%     \begin{itemize}
+%         \item Lemma 1 は, 1 つの CPU コアに割り当てられた $\Gamma^{c}$ の連続するサブセットに適用される
+%         \item Lemmaの条件により, 対応するインスタンスのサブセットが到着順に実行されることが保証される
+%         \item したがって, $\Gamma^{c}$ のインスタンスは, 後続のインスタンスから干渉を受けない
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{以降の流れ}
+%     \begin{enumerate}
+%         \item エグゼキュータ内で実行されるチェーンとエグゼキュータ間で実行されるチェーンの二つの側面を考慮して, スケジューリングポリシーの概要を説明する
+%         \item これらの戦略を実現するコールバック優先度割り当ておよびチェーンを考慮したノード割り当てアルゴリズムを提案する
+%     \end{enumerate}
+% \end{frame}
 
 
 \subsection{Strategies for chains running within an executor}
@@ -55,7 +60,7 @@
 
 \begin{frame}{}
     \fitimage{
-        戦略を図に示すチェーンとコールバックの分類から導き出す
+        スケジューリング戦略を図に示すチェーンとコールバックの分類から導き出す
     }{strategies_classification.png}
 \end{frame}
 
@@ -66,7 +71,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}[label=strategy2]{[戦略 II] 1 つのチェーンからのタイマ・レギュラーコールバック}
+\begin{frame}[label=strategy2]{[戦略 II] 1 つのチェーンからのタイマ/レギュラーコールバック}
     あるチェーンにおいてレギュラーコールバックはタイマコールバックよりも後ろに存在するため, 戦略 II は Lemma 1 の最初の条件を満たすようにする
     \begin{block}{戦略 II}
         エグゼキュータに単一チェーン $\Gamma^{c}$ のタイマ・レギュラーコールバックの両方が含まれる場合, レギュラーコールバックにタイマコールバックよりも高い優先度を与える
@@ -85,7 +90,7 @@
     \end{block}
 \end{frame}
 
-\begin{frame}[label=strategy4]{[戦略 IV] 複数のチェーンからのタイマ・レギュラーコールバック}
+\begin{frame}[label=strategy4]{[戦略 IV] 複数のチェーンからのタイマ/レギュラーコールバック}
     戦略 IV は重要度の高いチェーンインスタンスが重要度の低いインスタンスよりも優先されるようにする
     \begin{block}{戦略 IV}
         優先度の高いチェーンからのタイマコールバックは, 優先度の低いチェーンからのタイマコールバックよりも高い優先度を割り当てる
@@ -99,16 +104,16 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        複数のエグゼキュータ間で実行されるチェーンのスケジューリングポリシーについて説明する
+        複数のエグゼキュータ間で実行されるチェーンのスケジューリング戦略について説明する
     \end{itembox}
 \end{frame}
 
-\begin{frame}{}
-    \begin{itemize}
-        \item 各エグゼキュータは 1 つの CPU コアに割り当てられ, OS のプリエンプティブな固定優先度スケジューラによってスケジュールされるため, 複数のエグゼキュータが割り当てられている可能性がある各 CPU でチェーンスケジューリングを考慮する必要がある
-        \item エグゼキュータは 戦略 I から IV に従うとする
-    \end{itemize}
-\end{frame}
+% \begin{frame}{}
+%     \begin{itemize}
+%         \item 各エグゼキュータは 1 つの CPU コアに割り当てられ, OS のプリエンプティブな固定優先度スケジューラによってスケジュールされるため, 複数のエグゼキュータが割り当てられている可能性がある各 CPU でチェーンスケジューリングを考慮する必要がある
+%         \item エグゼキュータは 戦略 I から IV に従うとする
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{[戦略 V] 1 つの CPU に 1 つのチェーン}
     戦略 V は Lemma 1 の 2 番目の条件を満たすようにする
@@ -133,12 +138,12 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        前述のスケジューリングポリシーを実現するために, コールバック優先度割り当てアルゴリズムを提案する
+        前述のスケジューリング戦略を実現するために, コールバック優先度割り当てアルゴリズムを提案する
     \end{itembox}
 \end{frame}
 
 \begin{frame}{コールバック優先度割り当ての方針}
-    提案アルゴリズムは, コールバックに優先度を割り当てるために, まずその起点となるチェーンの優先度を考慮し, 次に各チェーン内の相対的な優先度を考慮するという階層的なアプローチを取る
+    提案アルゴリズムは, まずチェーンの優先度を考慮し, 次に各チェーン内のコールバックの割り当てる
 \end{frame}
 
 \begin{frame}{コールバック優先度割り当てアルゴリズム全体像}
@@ -155,23 +160,23 @@
 
 \begin{frame}{セクションサマリ}
     \begin{itembox}[l]{\textbf{目的}}
-        ROS2 のチェーン対応ノード割り当てスキームを提案する
+        ROS2 のチェーン考慮ノード割り当てスキームを提案する
     \end{itembox}
 \end{frame}
 
 \begin{frame}{提案スキームの方針}
     \begin{itemize}
-        \item 提案されたスキームは, 指定されたノードをエグゼキュータに割り当て, 前述のスケジューリングポリシーに従いながら, これらのエグゼキュータを使用可能な CPU コアに割り当てる
+        \item 提案されたスキームは, 指定されたノードをエグゼキュータに割り当て, 前述のスケジューリング戦略に従いながら, エグゼキュータを使用可能な CPU コアに割り当てる
         \item この方式では, 1つのチェーンに関連する全てのノードを可能な限り同じCPUコアに割り当てることで, チェーン間の干渉を最小化しようとする
     \end{itemize}
 \end{frame}
 
-\begin{frame}{提案スキームにおける注意点}
-    \begin{itemize}
-        \item この割り当て方式はオフラインで実行されるため, 実行時のオーバヘッドは発生しない
-        \item また, ノード間の通信はメッセージによって明示的に行われ, どのエグゼキュータを使用しても変わらないため, ノード間のデータ依存関係はノード割り当てに影響されない
-    \end{itemize}
-\end{frame}
+% \begin{frame}{提案スキームにおける注意点}
+%     \begin{itemize}
+%         \item この割り当て方式はオフラインで実行されるため, 実行時のオーバヘッドは発生しない
+%         \item また, ノード間の通信はメッセージによって明示的に行われ, どのエグゼキュータを使用しても変わらないため, ノード間のデータ依存関係はノード割り当てに影響されない
+%     \end{itemize}
+% \end{frame}
 
 \begin{frame}{フローで使用する表記法}
     \full{
@@ -194,33 +199,28 @@
     }
 \end{frame}
 
-\begin{frame}{提案スキームのフロー全体像}
-    \fullimage{proposed_schema.png}
-\end{frame}
 
 \begin{frame}{提案スキームの入力}
     提案スキームは以下を入力として受け取る
     \begin{itemize}
-        \item $(\mathrm{M})$: 使用するエグゼキュータの最大数,
-        \item $(\mathrm{P})$: 使用可能な CPU コアの数
-        \item $(\mathcal{N})$: 割り当てられるノードのセット
+        \item $\mathrm{M}$: 使用するエグゼキュータの最大数,
+        \item $\mathrm{P}$: 使用可能な CPU コアの数
+        \item $\mathcal{N}$: 割り当てられるノードのセット
     \end{itemize}
 \end{frame}
 
 \begin{frame}{提案スキームの前処理}
     \begin{itemize}
-        \item 最初に, $\mathcal{N}$ 内のノードを, 各ノードに含まれる最も優先度の高いコールバックの降順で並べ替える
-        \item これは, セマンティック優先度の高いチェーンに関連付けられたノードが最初に割り当てられることを意味する
+        \item 最初に, $\mathcal{N}$ 内のノードを, 各ノードに含まれるコールバックの優先順位の降順で並べ替える
+        \item これは, 優先度の高いチェーンに関連付けられたノードが最初に割り当てられるようにするため
     \end{itemize}
 \end{frame}
 
 \begin{frame}{提案スキーム概要}
-    \begin{itemize}
-        \item 提案スキームは, $\Gamma^{c}$ に関連付けられた全てのノードがフェッチされるか, $\mathbb{N}$ の利用率が 1 を超えるまで, $\mathcal{N}$ からノードを１つずつフェッチして, ノードのサブセット $\mathbb{N}$ を選択する
-    \end{itemize}
+    提案スキームは, $\Gamma^{c}$ に関連付けられた全てのノードがフェッチされるか, $\mathbb{N}$ の利用率が 1 を超えるまで, $\mathcal{N}$ からノードを１つずつフェッチして, ノードのサブセット $\mathbb{N}$ を選択する
 \end{frame}
 
-\begin{frame}{提案スキームの3パート概要}
+\begin{frame}{提案スキームを構成する3パート概要}
     \begin{block}{パート A}
         $\mathbb{N}$ を $e_{e}$ に, $e_{e}$ を実行可能な CPU コアに割り当てる
     \end{block}
@@ -230,6 +230,10 @@
     \begin{block}{パート C}
         最初の 2 つのパートでエグゼキュータに割り当てられなかった全ての残りのノードを処理する
     \end{block}
+\end{frame}
+
+\begin{frame}{提案スキームのフロー全体像}
+    \fullimage{proposed_schema.png}
 \end{frame}
 
 \begin{frame}{提案スキームフロー}
