--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
@@ -19,7 +19,7 @@
 \begin{frame}[label=exampleChain]{実験環境2}
     \fitimage{
         \begin{itemize}
-            \item 表 に示すように, 10 個のコールバックで構成される 2 つのセーフティクリティカルチェーンを使用する
+            \item 10 個のコールバックで構成される 2 つのチェーンを使用する
             \item チェーン 1 はチェーン 2 よりも重要であると想定する
         \end{itemize}
     }{challenge_model.png}
@@ -29,15 +29,18 @@
     次の 2 つのケースで実験を行う
     \begin{itemize}
         \item 全てのコールバックが単一のエグゼキュータにある
-        \item 各チェーンのコールバックが別のエグゼキュータに割り当てられる, すなわち, チェーンごとに 1 つのエグゼキュータが割り当てられる
+        \item 各チェーンごとに 1 つのエグゼキュータが割り当てられる
     \end{itemize}
 \end{frame}
 
 \begin{frame}{[課題 1] エグゼキュータ内の公平性に基づくスケジューリング}
-    \begin{itemize}
-        \item エクゼキュータ特有のスケジューリング動作は, タイマコールバックを常に最初にスケジュールし, 他のレギュラーコールバックの優先度割り当てを無効にするというものである
-        \item さらに, ROS2スケジューラは, チェーンによってコールバックを区別しないため, 全てのコールバックは, チェーンレベルのタイミング要件の概念を考慮せずにスケジュールされる.
-    \end{itemize}
+    \begin{block}{エグゼキュータ内の公平性に基づくスケジューリング}
+      \setlength{\linewidth}{0.98\columnwidth}
+      \begin{itemize}
+        \item タイマコールバックを常に最初にスケジュールし, 他のレギュラーコールバックの優先度割り当てを無効にする
+        \item チェーンによってコールバックを区別しないため, 全てのコールバックはチェーンレベルの重要度を考慮せずにスケジュールされる
+      \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{[課題 1] 例}
@@ -46,28 +49,31 @@
             \item 図は, 2 つのチェーンが一緒に実行されるときの単一のエグゼキュータ内のコールバックのスケジューリングタイムラインを示している
             \item ROS2 は両方のチェーンを公平に処理することが分かる
         \end{itemize}
-    }{challenge1_example.png}
+    }{challenge1_example}
 \end{frame}
 
 \begin{frame}{[課題 1] 問題点}
     \fitimage{
-        公平性に基づくスケジューリングは, 表に示すように非常に高いレイテンシが発生するため, セーフティクリティカルチェーンの適時性を危険にさらす可能性がある
+        公平性に基づくスケジューリングは, 非常に高いレイテンシが発生するため, セーフティクリティカルチェーンのリアルタイム性を危険にさらす可能性がある
     }{challenge1_result.png}
 \end{frame}
 
 \begin{frame}{[課題2] エグゼキュータの優先度割り当て}
-    \begin{itemize}
+    \begin{block}{エグゼキュータの優先度割り当て}
+      \setlength{\linewidth}{0.98\columnwidth}
+      \begin{itemize}
         \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS)~\cite{wong2008fairness} によってスケジュールされる
-        \item このスケジューラの下では, クリティカルチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先度を付けることは困難である
+        \item CFSの下では, 重要度が高いチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先度を付けることは困難
         \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 はそれを構成するための公式のインターフェイスを提供していない
-        \item さらに, ROS2 エグゼキュータ の優先度の割り当てに関する一般的なガイドラインはない
-    \end{itemize}
+        \item ROS2 エグゼキュータ の優先度の割り当てに関する一般的なガイドラインはない
+      \end{itemize}
+    \end{block}
 \end{frame}
 
 \begin{frame}{[課題2] 直観的な方法}
     \fitimage{
         \begin{itemize}
-            \item 最も直感的な方法は, 最も重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
+            \item 直感的な方法は, 重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
             \item チェーン1の全てのコールバックを含むエグゼキュータの優先度を99とし, チェーン2の他のエグゼキュータの優先度98とした場合のスケジュールタイムラインを図に示す
         \end{itemize}
     }{challenge2_timeline.png}
@@ -76,7 +82,7 @@
 \begin{frame}{[課題2] 直観的な方法の問題点}
     \fitimage{
         \begin{itemize}
-            \item 表に示すように, インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
+            \item しかし, インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
             \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先度の割り当てはより困難になる
         \end{itemize}
     }{challenge2_result.jpg}
